@@ -1,8 +1,7 @@
 #!/bin/bash
-#
 # DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 #
-# Copyright (c) 2012-2013 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2015 Oracle and/or its affiliates. All rights reserved.
 #
 # The contents of this file are subject to the terms of either the GNU
 # General Public License Version 2 only ("GPL") or the Common Development
@@ -39,16 +38,11 @@
 # holder.
 #
 
-LIBS=$(for l in `ls lib`; do echo -n lib/$l":";done)
-LIBS=`echo $LIBS | sed -es'/:$//'`
+FILE=$1
 
-java -server -Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m \
-      -XX:+UseParallelGC -XX:+AggressiveOpts -XX:+UseFastAccessorMethods \
-      -cp $LIBS \
-      -Djava.net.preferIPv4Stack=true \
-      -Dcom.sun.management.jmxremote \
-      -Dcom.sun.management.jmxremote.port=11112 \
-      -Dcom.sun.management.jmxremote.authenticate=false \
-      -Dcom.sun.management.jmxremote.ssl=false \
-      -Dcom.sun.management.jmxremote.local.only=false \
-      org.glassfish.jersey.tests.performance.param.srl.JerseyApp $1
+TARGET=$PWD/target
+TEST_DOMAIN=`cat $TARGET/test_domain.txt`
+
+. $TEST_DOMAIN/bin/setDomainEnv.sh
+
+java weblogic.Deployer -username weblogic -password weblogic1 -deploy $FILE
